style.css
body{
    background-color: black;
    display: grid; /* Use Grid */
    place-items: center;
}

canvas{
    margin: 0;
}

h1 {
    margin: auto;
    font-size: 70px;
    color: white;
    font-weight: bold;
    justify-self: center;
}

h2{
    margin: auto;
    color: white;
    font-weight: bold;
    justify-self: center;
    font-size: 20px;
    padding: 15px;
}

input{
    margin-top: 15px;
    height: 30px; 
    width: 200px; 
}

button {
    height: 35px; 
    width: 80px; 
    margin-bottom: 25px;
}

.removeButton {
    position: absolute;
    top: 0;
    right: 0;
    background-color: red;
    color: white;
    border: none;
    cursor: pointer;
    padding: 5px 10px;
    font-size: 12px;
    height: 25px;
    width: 20px; 
    padding: 5px;
    border-radius: 0 0 0 5px; 
    opacity: 0.8;
}

.removeButton:hover {
    opacity: 1; 
    background-color: red;
    cursor: pointer;
}

#remove-gifs {
    height: 35px; 
    width: 120px; 
    border-radius: 5px;
    border-style: none;
}

#remove-gifs:hover {
    background-color: crimson;
    color: aliceblue;
    cursor: pointer;
}


img {
    height: 250px; 
    width: 250px;
    padding: 20px;

    border-radius: 45px;
}

